[project]
name = "amalgamate-steel-flow-data"
version = "0.1.0"
description = "Consolidate particle image velocimetry (PIV) velocity fields and paired mould sensor traces for submerged entry nozzle (SEN) experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "pyarrow",
    "rich",
    "zarr",
]
